app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rahulverse-app
  namespace: rahulverse-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rahulverse-app
  template:
    metadata:
      labels:
        app: rahulverse-app
    spec:
      containers:
      - name: rahulverse-app
        image: rahulkumarpaswan/rahulverse-app:latest
        ports:
        - containerPort: 8089
---
apiVersion: v1
kind: Service
metadata:
  name: rahulverse-app
  namespace: rahulverse-prod
spec:
  selector:
    app: rahulverse-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8089
  type: LoadBalancer
