ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rahulverse-ingress
  namespace: rahulverse-prod
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - host: rahulverse.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rahulverse-app
            port:
              number: 8089
